--- a/before-we-start.html
+++ b/before-we-start.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2018-08-23 Thu 17:51 -->
+<!-- 2018-08-24 Fri 16:34 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Before we start</title>
@@ -646,7 +646,7 @@ for the JavaScript code in this tag.
 </head>
 <body>
 <div id="preamble" class="status">
-<span style="color:#596a73; font-size:17px"><b>Marie-Hélène Burle</b></span><br><span style="color:#596a73; font-size:15px"><img src="./email.ico" alt="email" height="16" width="16"> <a href="mailto:msb2@sfu.ca">msb2@sfu.ca</a>&nbsp;&nbsp;<img src="./twitter.ico" alt="twitter" height="17" width="17"> <a href="https://twitter.com/MHBurle">@MHBurle</a>&nbsp;&nbsp;<img src="./gh.ico" alt="github" height="15" width="15"> <a href="https://github.com/prosoitos">prosoitos</a></span><br><span style="color:#596a73; font-size:16px">August 23, 2018</span>
+<span style="color:#596a73; font-size:17px"><b>Marie-Hélène Burle</b></span><br><span style="color:#596a73; font-size:15px"><img src="./favicons/email.ico" alt="email" height="16" width="16"> <a href="mailto:msb2@sfu.ca">msb2@sfu.ca</a>&nbsp;&nbsp;<img src="./favicons/twitter.ico" alt="twitter" height="17" width="17"> <a href="https://twitter.com/MHBurle">@MHBurle</a>&nbsp;&nbsp;<img src="./favicons/gh.ico" alt="github" height="15" width="15"> <a href="https://github.com/prosoitos">prosoitos</a></span><br><span style="color:#596a73; font-size:16px">August 24, 2018</span>
 </div>
 <div id="content">
 <h1 class="title">Before we start</h1>
@@ -654,24 +654,24 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgde5631e">Font size and microphone volume ok?</a></li>
-<li><a href="#orgfb8a542">The helpers</a></li>
-<li><a href="#org0f0ae89">All material available online</a></li>
+<li><a href="#org4fe46da">Font size and microphone volume ok?</a></li>
+<li><a href="#org34409be">The helpers</a></li>
+<li><a href="#orgf231635">All material available online</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgde5631e" class="outline-2">
-<h2 id="orgde5631e">Font size and microphone volume ok?</h2>
+<div id="outline-container-org4fe46da" class="outline-2">
+<h2 id="org4fe46da">Font size and microphone volume ok?</h2>
 </div>
 
-<div id="outline-container-orgfb8a542" class="outline-2">
-<h2 id="orgfb8a542">The helpers</h2>
+<div id="outline-container-org34409be" class="outline-2">
+<h2 id="org34409be">The helpers</h2>
 </div>
 
-<div id="outline-container-org0f0ae89" class="outline-2">
-<h2 id="org0f0ae89">All material available online</h2>
-<div class="outline-text-2" id="text-org0f0ae89">
+<div id="outline-container-orgf231635" class="outline-2">
+<h2 id="orgf231635">All material available online</h2>
+<div class="outline-text-2" id="text-orgf231635">
 <p>
 <a href="https://github.com/prosoitos/r_workshop_international-ornithological-congress">https://github.com/prosoitos/r_workshop_international-ornithological-congress</a><br />
 </p>
